2009-10-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac:
	Adapt to changes from pub:r8195.

2009-08-25  Josep Joan Ribas  <jribas@flumotion.com>

	* configure.ac:
	Back to dev

=== release 0.5.1 ===

2009-08-25  Josep Joan Ribas  <jribas@flumotion.com>

	* configure.ac:
	Releasing 0.5.1

2009-06-18  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	In case of parsing error, save the state in files for debuging.
	Properly mask out the packet first bit of the first byte.
	* flumotion/component/producers/wms/wms.py:
	Logs HTTP requests and response headers.
	Logs connection/requests transfer status.
	Disabled twisted web default HTTP timeout of 12 hours.	

2009-04-23  Xavier Queralt Mateu <xqueralt@flumotion.com>

	* configure.ac:
	Back to dev

=== release 0.5.0 ===

2009-04-23  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* configure.ac:
	Releasing 0.5.0 and updating the requirements of flumotion to 0.5.4
	* pkg/ubuntu-intrepid (added):
	* pkg/ubuntu-intrepid/control (added):
	* pkg/ubuntu-intrepid/changelog (added):
	Add a new directory for ubuntu intrepid packages

2009-02-25  Sebastien Merle  <sebastien@fluendo.com>

	* env.in:
	Fixed the environment setup script.

2008-12-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Undoing last commit, wrong fix

2008-12-03  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Require fluasfmux for wma and wmv encoders.
	Fixes #2774

2008-09-18  Jan Urbanski <jurbanski@flumotion.com>

	* flumotion/component/producers/wms/wms.py
	(WindowsMediaServer.configure_pipeline):
	In the WMS component Use the right medium porter connections. Fixes
	#2335.

2008-09-12  Thomas Vander Stichele  <thomas at apestaart dot org>
