@@ -1,3 +1,12 @@
+2009-11-24  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Sebastien Merle 
+
+	* flumotion/component/encoders/wma/wma.py:
+	* flumotion/component/encoders/wma/wma.xml:
+	Added 'samplerate' property to wma-encoder element
+	Closes #5852
+
 2009-10-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* configure.ac:
